Run tests now paginated. Scenarios and devices no longer collapsed

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,9 +3,9 @@ html, body {
     background-color: #FFF;
 }
 
-#content, .page, body, html {
+/*#content, .page, body, html {
 	height: 100%;
-}
+}*/
 
 
 .container {
